# ignyt

./: .env.example  .gitignore  CLAUDE.md  Containerfile.backend  Containerfile.frontend  README.md  podman-compose.yml  render.yaml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_phase1_initial.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  challenge.py  content.py  feedback.py  gamification.py  inventory.py  learning.py  progress.py  question.py  review.py  user.py
backend/app/question_generators/: __init__.py  base.py  ch1_s1_rationals.py  ch1_s2_irrationals.py  ch1_s3_decimals.py  ch1_s4_operations.py  ch1_s5_exponents.py
backend/app/routers/: auth.py  content.py  daily_challenge.py  gamification.py  learn.py  progress.py  questions.py  review.py
backend/app/schemas/: auth.py  common.py  content.py  gamification.py  progress.py  question.py
backend/app/seed/: chapter1.py
backend/app/services/: auth_service.py  badge_service.py  progress_service.py  questions_service.py  streak_service.py  xp_service.py
backend/app/utils/: level.py  math_score.py  security.py
backend/tests/: conftest.py  test_auth.py  test_progress.py  test_question_engine.py
docs/: SPEC.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useAuth.ts  useProgress.ts  useQuestions.ts  useTheme.ts
(+26 files in other folders)
